all users registration completed
